common/force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <label>구독내역</label>
    <nameField>
        <displayFormat>S-{YY}{MM}{000000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>구독내역</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>