common/force-app/main/default/objects/Subscription__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>아동 이름</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>구독내역들</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>