common/force-app/main/default/objects/Subscription__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>구독내역들을 Summary 하여 볼 수 있는 계약 내용 조회</description>
    <label>계약 ID</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>구독내역</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>