common/force-app/main/default/objects/Subscription__c/fields/CurriculumId__c.field-meta.xml
<CustomField>
    <fullName>CurriculumId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>커리큘럼명</label>
    <referenceTo>Curriculum__c</referenceTo>
    <relationshipLabel>구독내역</relationshipLabel>
    <relationshipName>CurriculumName</relationshipName>
    <type>Lookup</type>
</CustomField>