common/force-app/main/default/objects/Subscription__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>요일</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>월</fullName>
            </value>
            <value>
                <fullName>화</fullName>
            </value>
            <value>
                <fullName>수</fullName>
            </value>
            <value>
                <fullName>목</fullName>
            </value>
            <value>
                <fullName>금</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>