common/force-app/main/default/objects/Subscription__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>구독 종료일</label>
    <type>Date</type>
</CustomField>