common/force-app/main/default/objects/Subscription__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <label>EndDateTime</label>
    <type>DateTime</type>
</CustomField>