common/force-app/main/default/objects/Subscription__c/fields/Flow_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Product_Name__c</fullName>
    <label>Flow Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>