common/force-app/main/default/objects/Subscription__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>과정명</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Name</field>
            <operation>equals</operation>
            <valueField>Product2.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>구독내역</relationshipLabel>
    <relationshipName>ProductName</relationshipName>
    <type>Lookup</type>
</CustomField>