common/force-app/main/default/objects/Subscription__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>계약서</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>구독내역</relationshipLabel>
    <relationshipName>SubtoQuote</relationshipName>
    <type>Lookup</type>
</CustomField>