common/force-app/main/default/objects/Subscription__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>구독 시작일</label>
    <type>Date</type>
</CustomField>