common/force-app/main/default/objects/Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>구독상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>진행중</fullName>
            </value>
            <value>
                <fullName>완료</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <label>취소</label>
            </value>
            <value>
                <fullName>진행전</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>