common/force-app/main/default/objects/Subscription__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>개월수</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>